css/main.css
/* ... */
::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
  
   /* General Styles */

   body {
    font-family: 'Lekton', sans-serif;
    font-size: 1em;
    text-align: left;
    color: #152a3e;
    background-color: #cac691;
    width: 100%;
  }
  
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }

  a {
    color: #152A3E;
    text-decoration: none;
  }

  h1 {
    font-family: 'Lexend Tera', sans-serif;
    font-size: 1.75em;
    line-height: 1.5;
    width: 100%;
  }

  h2 {
    font-size:1.5em;
    line-height: 1.5;
    width: 100%;
    margin-top: 60px;
    font-family: 'Lexend Tera', sans-serif;
  }

  h3 {
    font-size:1.25em;
    width:100%;
    line-height: 1.5;
    margin-bottom: 20px;
    font-family: 'Lexend Tera', sans-serif;
  }

  p {
    margin: 0;
  }

  p, li {
    font-size: 1em;
    line-height: 1.5;
  }

  span {
    font-weight: bold;
  }

  .content-wrapper {
    width: 85%;
  }
  
  .project-link, .language-wrapper p,
  .tools-wrapper p {
    font-size: 1.125em;
    text-transform: uppercase;
  }
  
  address {
    font-style: normal;
  }
  
  img {
    width: 100%;
  }
  
  figure {
    margin: 0;
  }

  .about {
    background: #eeefda;
  }

  .about img {
    margin: 0 40px;
    justify-content: space-around;
  }

  header, #work, #skills, #about, footer {
    display: flex;
    justify-content: center;
    text-align: center;
    flex-flow: row wrap;
  }

  #work p,
  #about p {
    width: 100%;
    text-align: left;
  }
  
  .project-description {
    margin: 0 0 30px 0;
  }

  .project-link {
    margin: 40px 0 60px 0;
  }

  .skills-header {
    margin-bottom: 20px;
  }

  .about-info h2 {
    margin: 40px;
  }

  .about-text {
    margin-bottom: 30px;
    font-size: 1.2em;
  }

  .copyright {
    color: #eeefda;
  }

 /* -------------------- Base Header - Footer Styles ----------------------*/

/* Header styles */

header {
  padding: 30px 0 60px;
  background: #152A3E;
  color: #eeefda;
}

header h2 {
  width: 100%;
}

header h1 {
  width: 100%;
}

header .content-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  margin: 0;
  padding-bottom: 35px;
}

nav ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  text-transform: uppercase;
}

nav li {
  font-size: 1em;
  font-weight: bold;
  margin-bottom: 20px;
  text-transform: uppercase;
  padding: 10px;
}

nav a {
  color: #eeefda;
}

nav a:hover {
  color: #cac691; 
}

nav span {
  background-color: #cac691;
  color: #152A3E;
  padding: 8px;
  border-radius: 40px;
}

nav span:hover {
  background-color: #e7e5cb;
}

/* Footer styles */

footer {
  display: flex;
  justify-content: center;
  text-align: center;
  flex-flow: row wrap;
  font-size:1.25em;
  padding: 80px 0;
  background-color: #152A3E;
  color: #eeefda;
}

footer .content-wrapper {
  width: 55%;
  margin: 50px 0;
}

footer .contact {
  margin-bottom: 50px;
}

.copyright {
  margin: 20px 0;
  text-align: center;
}

footer .social-icons {
  display: flex;
  list-style-type: none;
  font-size: 2em;
  justify-content: space-around;
  padding-left: 0;
}

footer .social-icons li i {
  font-size: 1.875em;
  color: #cac691;
}

.contact-header {
  margin-bottom: 60px;
}

.contact-info {
  margin-bottom: 60px;
}


/* ------------------- Mobile Styles ------------------ */

nav {
  font-size: 1em;
  font-weight: 800;
  padding-right: 25px;
}


/* Portfolio */

#work,
#skills {
  width: 100%;
}

#work h2 {
  width: 100%;
}

.project-wrapper {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-flow: row wrap;
}

.project-link {
  margin: 40px 60px;
  padding: 0.75rem 3.75rem;
  border-radius: 30px;
  color: #fff;
  background-color: #152A3e;
}

.project-link:hover {
  background-color: #b4c7d9;
  color: #152A3E;
}

.project-piece {
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.project-piece h3 {
  font-weight: bold;
  padding: 1.5em 0;
}

.project-piece figure {
  width: 100%;
  filter: drop-shadow(1px 2px 6px lightgrey);
  padding: 25px 45px 25px 25px;
}

#skills {
  background-color: #eeefda;
  padding: 30px;
}

#skills h2 {
  font-weight: bold;
}

#skills .content-wrapper {
  margin: 0;
}

.language-wrapper p,
.tools-wrapper p {
  background-color: #cac691; 
  padding: 15px 0;
  margin: 20px 0;
}

.tool {
  width: 100%;
}

#about {
  width: 100%;
  padding: 60px 0;
}

#about img {
  width: 90%;
  border: solid 5px lightgrey;
}

footer .contact-wrapper {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: flex-start;
}

footer .contact-info {
  width: 60%;
}

footer h3 {
  width: 100%;
}

footer .follow-section {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

footer .social-icons {
  display: flex;
  justify-content: center;
}

footer ul {
  width: 80%;
}

footer .social-icons li {
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
}
/* ... */

